--- a/index.html
+++ b/index.html
@@ -14,11 +14,36 @@
     <section class="container principal">
         <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img class="container__imagem" src="img/Combo.png" alt="O Combo+ é a junção do Alura+ e Alura Língua">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+                <img class="container__imagem" src="img/Combo.png" alt="O Combo+ é a junção do Alura+ e Alura Língua">
+                <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+                <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feito em outros planos</p>
         </div>
+    </section>
+    <section class="container secundario">
+                <img src="img/Plataformas.png" alt="um monitor e um celular com o alura plus aberto" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a cursos de diversas áreas de tecnologia e aprender ou espanhol onde e como quiser</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+                <img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua" class="secundario__imagem">
+        </div>
+    </section>
+    <section class="dispositivos">
+            <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+            <li> <img src="img/tv.png" alt="ícone de televisão">
+            <h3 class="lista__item">TV</h3>
+            <li> <img src="img/computador.png" alt="ícone de computador">
+            <h3 class="lista__item">Computadores</h3>
+            <li> <img src="img/celular.png" alt="ícone de celular">
+            <h3 class="lista__item">Celular</h3></li>
+            </ul>
     </section>
 </body>
 </html>
